# dog-tunnel

./: .gitignore  .gitlab-ci.yml  .travis.yml  BUG  Cargo.toml  Dockerfile  HowToUse.txt  LICENSE  Makefile  README  README.en.md  README.md  TODO  client.go  client_unix.go  dogtunnel  go.mod  release.sh  server.go  start.sh  test.sh
.github/workflows/: go.yml
admin/: admin.go
auth/: auth.go  auth.sql
common/: cache.go  cache_test.go  common.go  servercommon.go
doc/: docker.md
ikcp/: ikcp.go  ikcp_h.go  ikcp_test.go  ikcp_test_h.go
keys/: demo  server.crt  server.key
nat/: connection.go  gather.go  nat.go
nat/stun/: stun.go
pipe/: pipe.go  pipe_test.go
platform/: platform_darwin.go  platform_unix.go  platform_win.go
scripts/: doghole.sh  install_linux.sh  install_ubuntu.sh
src/: lib.rs  main.rs
src/cmd/: mod.rs
src/cmd/client/: mod.rs  sub_main.rs
src/cmd/server/: mod.rs  sub_main.rs
src/common/: flags_info.rs  mod.rs
src/pipe/: mod.rs  pipe.rs  tcp_pipe.rs  udp_pipe.rs  udp_punch_server.rs
src/session/connection/pipe/: mod.rs  udp_punch_server.rs
src/way/: way.rs
src/way/session/connection/pipe/: tcp_pipe.rs  udp_pipe.rs
tests/: pipe_test.rs
